# vimetronome

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/vimetronome/: cli.py  metronome.py
